# SourceSoundEditor

./: .editorconfig  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
soundedit/: __main__.py  graph.py  manifest.py  nodes.py  soundedit.py  types.py  utils.py
soundedit/games/: chaos.json  strata.json
