[build-system]
build-backend = "setuptools.build_meta"
requires = [
	"setuptools>=45"
]

[project]
name = "SourceSoundEditor"
description = "Sound Operator Stacks editor for Strata Source"
requires-python = ">=3.10"
version = "0.1.0"


[project.scripts]
soundedit = "soundedit.__main__:main"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt" ]
